Closed Bug 1500530 Opened 7 years ago Closed 7 years ago

<input type="file"> label width is too small. (tori.fi picture upload broken in Nightly)

Categories

(Core :: Layout: Form Controls, defect)

64 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla65
Tracking Status
firefox-esr60 --- unaffected
firefox63 --- unaffected
firefox64 + verified
firefox65 + verified

People

(Reporter: hsivonen, Assigned: MatsPalmgren_bugz)

References

()

Details

(Keywords: regression)

Attachments

(3 files)

Steps to reproduce: 1) Navigate to https://www2.tori.fi/ai/form/0?ca=18 2) Towards to the bottom of the page, locate the square with the text "Lisää kuva" 4) Move the mouse cursor over the text "Lisää kuva" so that it changes color 3) Click the text "Lisää kuva" Actual results: Nothing Expected results: Expected a file upload file picker to show up. Additional info: This works on the release channel and broke on Nightly in the last 6 days.
I repteated the bisection twice and always got bug 1495261 as as result 6:24.38 INFO: Last good revision: 4c10bee140e0e63deeb9bb9ea646dbbb2b7668d6 6:24.38 INFO: First bad revision: db73000c424ba29b41f6f5438ce6a389b4e529ef 6:24.38 INFO: Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=4c10bee140e0e63deeb9bb9ea646dbbb2b7668d6tochange=db73000c424ba29b41f6f5438ce6a389b4e529ef
Blocks: 1495261
Needinfoing bhackett per comment 1.
Flags: needinfo?(bhackett1024)
For context, this site is relatively notable in Finland. (It's a popular site for posting items for second-hand sale.)
Component: General → File Handling
Product: Core → Firefox
I'm able to reproduce the problem on 4c10bee140e0e63deeb9bb9ea646dbbb2b7668d6, before bug 1495261 landed. Bug 1495261 should not affect this page, or any other one; it changes some JS that only runs when recording a tab using Web Replay.
Flags: needinfo?(bhackett1024)
[Tracking Requested - why for this release]: Stops working <Input type=file> in some cases due to regression Regression window: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=90853a59691e0c77014c38049bfb38b2b6ca1e16&tochange=4c10bee140e0e63deeb9bb9ea646dbbb2b7668d6 Regressed by: Bug 1495153 :mats, Could you please look into this?
Blocks: 1495153
No longer blocks: 1495261
Component: File Handling → Layout: Form Controls
Flags: needinfo?(mats)
Product: Firefox → Core
Version: unspecified → 64 Branch
I'll take a look...
Assignee: nobody → mats
Flags: needinfo?(mats)
Attached file Testcase
It seems the intrinsic size has changed. I'm guessing there's a built-in min-inline-size associated with a XUL label that's now missing and makes the control smaller than before. I haven't found where that min-inline-size comes from yet though...
This rule should apply and is the same size as before: https://searchfox.org/mozilla-central/rev/a7f4d3ba4fbfe3efbde832869f1d672fce7122f6/layout/style/res/forms.css#493-494 so I'm not sure why there's a difference, hmm...
Oh darn, our HTML <label> is an inline by default so that declaration simply doesn't apply... LOL.
Attached image image.png
(In reply to Mats Palmgren (:mats) from comment #7) > Created attachment 9019746 [details] > Testcase > > It seems the intrinsic size has changed. I'm guessing there's > a built-in min-inline-size associated with a XUL label that's > now missing and makes the control smaller than before. I haven't > found where that min-inline-size comes from yet though... And field becomes too short when choose file with short file name. This is unacceptable bug.
Summary: tori.fi picture upload broken in Nightly → <input type="file"> label width is too small. (tori.fi picture upload broken in Nightly)
Attachment #9019903 - Flags: review?(jfkthame) → review+
Pushed by mpalmgren@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4896323e685b Make the anonymous child <label> have display:inline-block so that it applies its min-inline-size. r=jfkthame
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment on attachment 9019903 [details] [diff] [review] Make the anonymous child <label> have display:inline-block so that it applies its min-inline-size [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1495153 User impact if declined: Is this code covered by automated tests?: Yes Has the fix been verified in Nightly?: No Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Medium Why is the change risky/not risky? (and alternatives if risky): String changes made/needed:
Attachment #9019903 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Flags: in-testsuite+
Comment on attachment 9019903 [details] [diff] [review] Make the anonymous child <label> have display:inline-block so that it applies its min-inline-size [Triage Comment] Fixes a new visual regression in Fx64 and includes a new reftest. Approved for 64.0b5.
Attachment #9019903 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Hi, I reproduced this issue in Firefox Beta 64.0b4 but I can no longer reproduce this issue in Firefox 64.0b5 (https://tools.taskcluster.net/index/gecko.v2.mozilla-beta.latest.firefox/win64-opt) and I can Confirm it as Fixed in 65.0a1 (2018-10-28), I will mark this issue accordingly.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: