Bug 1500530 - Make the anonymous child <label> have display:inline-block so that it applies its min-inline-size.  r=jfkthame a=RyanVM

--HG--
extra : source : 4896323e685bbf01aae997920d3176b845fd7b6f